--- a/daily-diary/index.css
+++ b/daily-diary/index.css
@@ -1,7 +1,98 @@
-*{
+*{  /*모든요소 선택*/
+
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
+    
+}
+
+.container{
+   
+background-color: #eeeeee;
+
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 50px 0px;
 
 }
 
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    width:620px;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 40px 30px;
+}
+
+.wrapper__head{
+
+    border-bottom: 1px dashed gray;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+
+}
+
+.wrapper__head__title{
+    font-size: 32px;
+    background-color: orange;
+    color: white;
+    text-align: center;
+    padding:5px;
+    margin-bottom: 10px;
+
+}
+
+.wrapper__head__subtitle{
+
+    font-size: 18px;
+    padding: 10px 0px;
+
+}
+
+#point{
+    color: orange;
+    font-size: 22px;
+    font-weight: bold;
+    text-decoration: underline;
+    margin-top: 15px;
+    display: block;
+}
+
+.wrapper__body{
+   border:1px solid #dddddd;
+   padding: 20px 30px;
+}
+
+.diary-title{
+    font-size: 18px;
+    font-weight: 600;
+    background-color: #f4f4f4;
+    margin-bottom: 20px;
+}
+.chicken{
+    color:red;
+    font-weight: 600;
+
+}
+
+.fruit{
+    font-weight: 600;
+    color: green;
+}
+
+.highlight{
+  font-size: 22px;
+  font-weight: 700;
+  font-style: italic;
+  color: blueviolet;
+
+}
+
+.diary-date{
+    color:#919191;
+    font-size: 14px;
+    text-align: right;
+}
