--- a/daily-diary/index.css
+++ b/daily-diary/index.css
@@ -100,7 +100,7 @@ padding: 50px 0px;
 .header{
     
     border-bottom: 1px solid gray;
-    background-color: yellow;
+  
    
    
 }
@@ -113,23 +113,66 @@ padding: 50px 0px;
 }
 
 .logo{
-    background-color: red;
-    float: left;
 
+    float: left;
+    width:100px;
+    height: 80px;
+    padding-top: 17px;
+
+}
+
+.logo h1 a{
+    text-decoration: none;
+    color: orange;
 }
 
 .menu{
-    background-color: blue;
+   
     float: left;
+    width:calc(100% - 200px);
+     text-align: center; 
+   
+
+}
+
+.menu_ul{
+    display: inline-block;
+
+
+}
+
+.menu_ul li{
+    float: left;
+    list-style: none;
+   
+  
+
+
+}
+
+.menu_ul li a{
+    display: block;
+   color: black;
+   text-decoration: none;
+    padding: 29px 20px; 
+
+    
+}
+
+.menu_ul li a:hover{ /*마우스를 올렸을 때, 색상 변경*/
+    color: orange;
 }
 
 .user{
-    background: green;
+   
+    width: 100px;
     float: left;
+    height: 80px;
+    padding-top: 23px;
 
 }
 .clearfix{
-    background-color: red;
+ 
     clear: both;
     
 }
